STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/VL53L7CX_ULD_API/inc/vl53l7cx_api.h

/**
 * @brief Macro VL53L7CX_RESOLUTION_4X4 or VL53L7CX_RESOLUTION_8X8 allows
 * setting sensor in 4x4 mode or 8x8 mode, using function
 * vl53l7cx_set_resolution().
 */

#define VL53L7CX_RESOLUTION_4X4 ((uint8_t)16U)
#define VL53L7CX_RESOLUTION_8X8 ((uint8_t)64U)
/**
 * @brief Macro VL53L7CX_TARGET_ORDER_STRONGEST or VL53L7CX_TARGET_ORDER_CLOSEST
 *	are used to select the target order for data output.
 */

#define VL53L7CX_TARGET_ORDER_CLOSEST ((uint8_t)1U)
#define VL53L7CX_TARGET_ORDER_STRONGEST ((uint8_t)2U)
/**
 * @brief Macro VL53L7CX_RANGING_MODE_CONTINUOUS and
 * VL53L7CX_RANGING_MODE_AUTONOMOUS are used to change the ranging mode.
 * Autonomous mode can be used to set a precise integration time, whereas
 * continuous is always maximum.
 */

#define VL53L7CX_RANGING_MODE_CONTINUOUS ((uint8_t)1U)
/**
 * @brief Structure VL53L7CX_Configuration contains the sensor configuration.
 * User MUST not manually change these field, except for the sensor address.
 */

typedef struct
{
	/* Platform, filled by customer into the 'platform.h' file */
	VL53L7CX_Platform platform;
	/* Results streamcount, value auto-incremented at each range */
	uint8_t streamcount;
	/* Size of data read though I2C */
	uint32_t data_read_size;
	/* Address of default configuration buffer */
	uint8_t *default_configuration;
	/* Address of default Xtalk buffer */
	uint8_t *default_xtalk;
	/* Offset buffer */
	uint8_t offset_data[VL53L7CX_OFFSET_BUFFER_SIZE];
	/* Xtalk buffer */
	uint8_t xtalk_data[VL53L7CX_XTALK_BUFFER_SIZE];
	/* Temporary buffer used for internal driver processing */
	uint8_t temp_buffer[VL53L7CX_TEMPORARY_BUFFER_SIZE];
	/* Auto-stop flag for stopping the sensor */
	uint8_t is_auto_stop_enabled;
} VL53L7CX_Configuration;
/**
 * @brief Structure VL53L7CX_ResultsData contains the ranging results of
 * VL53L7CX. If user wants more than 1 target per zone, the results can be split
 * into 2 sub-groups :
 * - Per zone results. These results are common to all targets (ambient_per_spad
 * , nb_target_detected and nb_spads_enabled).
 * - Per target results : These results are different relative to the detected
 * target (signal_per_spad, range_sigma_mm, distance_mm, reflectance,
 * target_status).
 */

typedef struct
{
	/* Internal sensor silicon temperature */
	int8_t silicon_temp_degc;

	/* Ambient noise in kcps/spads */
#ifndef VL53L7CX_DISABLE_AMBIENT_PER_SPAD
	uint32_t ambient_per_spad[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Number of valid target detected for 1 zone */
#ifndef VL53L7CX_DISABLE_NB_TARGET_DETECTED
	uint8_t nb_target_detected[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Number of spads enabled for this ranging */
#ifndef VL53L7CX_DISABLE_NB_SPADS_ENABLED
	uint32_t nb_spads_enabled[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Signal returned to the sensor in kcps/spads */
#ifndef VL53L7CX_DISABLE_SIGNAL_PER_SPAD
	uint32_t signal_per_spad[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Sigma of the current distance in mm */
#ifndef VL53L7CX_DISABLE_RANGE_SIGMA_MM
	uint16_t range_sigma_mm[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Measured distance in mm */
#ifndef VL53L7CX_DISABLE_DISTANCE_MM
	int16_t distance_mm[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Estimated reflectance in percent */
#ifndef VL53L7CX_DISABLE_REFLECTANCE_PERCENT
	uint8_t reflectance[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Status indicating the measurement validity (5 & 9 means ranging OK)*/
#ifndef VL53L7CX_DISABLE_TARGET_STATUS
	uint8_t target_status[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Motion detector results */
#ifndef VL53L7CX_DISABLE_MOTION_INDICATOR
	struct
	{
		uint32_t global_indicator_1;
		uint32_t global_indicator_2;
		uint8_t status;
		uint8_t nb_of_detected_aggregates;
		uint8_t nb_of_aggregates;
		uint8_t spare;
		uint32_t motion[32];
	} motion_indicator;
#endif

} VL53L7CX_ResultsData;
/**
 * @brief This function gets the ranging data, using the selected output and the
 * resolution.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (VL53L7CX_ResultsData) *p_results : VL53L5 results structure.
 * @return (uint8_t) status : 0 data are successfully get.
 */

uint8_t vl53l7cx_get_ranging_data(
	VL53L7CX_Configuration *p_dev,
	VL53L7CX_ResultsData *p_results);
/**
 * @brief This function gets the current resolution (4x4 or 8x8).
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_resolution : Value of this pointer will be equal to 16
 * for 4x4 mode, and 64 for 8x8 mode.
 * @return (uint8_t) status : 0 if resolution is OK.
 */

uint8_t vl53l7cx_get_resolution(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_resolution);
/**
 * @brief This function sets a new resolution (4x4 or 8x8).
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) resolution : Use macro VL53L7CX_RESOLUTION_4X4 or
 * VL53L7CX_RESOLUTION_8X8 to set the resolution.
 * @return (uint8_t) status : 0 if set resolution is OK.
 */

uint8_t vl53l7cx_set_resolution(
	VL53L7CX_Configuration *p_dev,
	uint8_t resolution);
/**
 * @brief This function gets the current ranging frequency in Hz. Ranging
 * frequency corresponds to the time between each measurement.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_frequency_hz: Contains the ranging frequency in Hz.
 * @return (uint8_t) status : 0 if ranging frequency is OK.
 */

uint8_t vl53l7cx_get_ranging_frequency_hz(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_frequency_hz);
/**
 * @brief This function sets a new ranging frequency in Hz. Ranging frequency
 * corresponds to the measurements frequency. This setting depends of
 * the resolution, so please select your resolution before using this function.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) frequency_hz : Contains the ranging frequency in Hz.
 * - For 4x4, min and max allowed values are : [1;60]
 * - For 8x8, min and max allowed values are : [1;15]
 * @return (uint8_t) status : 0 if ranging frequency is OK, or 127 if the value
 * is not correct.
 */

uint8_t vl53l7cx_set_ranging_frequency_hz(
	VL53L7CX_Configuration *p_dev,
	uint8_t frequency_hz);
/**
 * @brief This function gets the current integration time in ms.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) *p_time_ms: Contains integration time in ms.
 * @return (uint8_t) status : 0 if integration time is OK.
 */

uint8_t vl53l7cx_get_integration_time_ms(
	VL53L7CX_Configuration *p_dev,
	uint32_t *p_time_ms);
/**
 * @brief This function sets a new integration time in ms. Integration time must
 * be computed to be lower than the ranging period, for a selected resolution.
 * Please note that this function has no impact on ranging mode continous.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) time_ms : Contains the integration time in ms. For all
 * resolutions and frequency, the minimum value is 2ms, and the maximum is
 * 1000ms.
 * @return (uint8_t) status : 0 if set integration time is OK.
 */

uint8_t vl53l7cx_set_integration_time_ms(
	VL53L7CX_Configuration *p_dev,
	uint32_t integration_time_ms);
/**
 * @brief This function gets the current sharpener in percent. Sharpener can be
 * changed to blur more or less zones depending of the application.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) *p_sharpener_percent: Contains the sharpener in percent.
 * @return (uint8_t) status : 0 if get sharpener is OK.
 */

uint8_t vl53l7cx_get_sharpener_percent(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_sharpener_percent);
/**
 * @brief This function sets a new sharpener value in percent. Sharpener can be
 * changed to blur more or less zones depending of the application. Min value is
 * 0 (disabled), and max is 99.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) sharpener_percent : Value between 0 (disabled) and 99%.
 * @return (uint8_t) status : 0 if set sharpener is OK.
 */

uint8_t vl53l7cx_set_sharpener_percent(
	VL53L7CX_Configuration *p_dev,
	uint8_t sharpener_percent);
/**
 * @brief This function gets the current target order (closest or strongest).
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_target_order: Contains the target order.
 * @return (uint8_t) status : 0 if get target order is OK.
 */

uint8_t vl53l7cx_get_target_order(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_target_order);
/**
 * @brief This function sets a new target order. Please use macros
 * VL53L7CX_TARGET_ORDER_STRONGEST and VL53L7CX_TARGET_ORDER_CLOSEST to define
 * the new output order. By default, the sensor is configured with the strongest
 * output.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) target_order : Required target order.
 * @return (uint8_t) status : 0 if set target order is OK, or 127 if target
 * order is unknown.
 */

uint8_t vl53l7cx_set_target_order(
	VL53L7CX_Configuration *p_dev,
	uint8_t target_order);
/**
 * @brief This function is used to get the ranging mode. Two modes are
 * available using ULD : Continuous and autonomous. The default
 * mode is Autonomous.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_ranging_mode : current ranging mode
 * @return (uint8_t) status : 0 if get ranging mode is OK.
 */

uint8_t vl53l7cx_get_ranging_mode(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_ranging_mode);
/**
 * @brief This function is used to set the ranging mode. Two modes are
 * available using ULD : Continuous and autonomous. The default
 * mode is Autonomous.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) ranging_mode : Use macros VL53L7CX_RANGING_MODE_CONTINUOUS,
 * VL53L7CX_RANGING_MODE_CONTINUOUS.
 * @return (uint8_t) status : 0 if set ranging mode is OK.
 */

uint8_t vl53l7cx_set_ranging_mode(
	VL53L7CX_Configuration *p_dev,
	uint8_t ranging_mode);
/**
 * @brief This function is used to get the number of frames between 2 temperature
 * compensation.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) *p_repeat_count : Number of frames before next temperature
 * compensation. Set to 0 to disable the feature (default configuration).
 */
uint8_t vl53l7cx_get_VHV_repeat_count(
	VL53L7CX_Configuration *p_dev,
	uint32_t *p_repeat_count);
/**
 * @brief This function is used to set a periodic temperature compensation. By
 * setting a repeat count different to 0 the firmware automatically runs a
 * temperature calibration every N frames.
 * default the repeat count is set to 0
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint32_t) repeat_count : Number of frames between temperature
 * compensation. Set to 0 to disable the feature (default configuration).
 */
uint8_t vl53l7cx_set_VHV_repeat_count(
	VL53L7CX_Configuration *p_dev,
	uint32_t repeat_count);
/**
 * @brief This function can be used to read 'extra data' from DCI. Using a known
 * index, the function fills the casted structure passed in argument.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *data : This field can be a casted structure, or a simple
 * array. Please note that the FW only accept data of 32 bits. So field data can
 * only have a size of 32, 64, 96, 128, bits ....
 * @param (uint32_t) index : Index of required value.
 * @param (uint16_t)*data_size : This field must be the structure or array size
 * (using sizeof() function).
 * @return (uint8_t) status : 0 if OK
 */

uint8_t vl53l7cx_dci_read_data(
	VL53L7CX_Configuration *p_dev,
	uint8_t *data,
	uint32_t index,
	uint16_t data_size);
/**
 * @brief This function can be used to write 'extra data' to DCI. The data can
 * be simple data, or casted structure.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *data : This field can be a casted structure, or a simple
 * array. Please note that the FW only accept data of 32 bits. So field data can
 * only have a size of 32, 64, 96, 128, bits ..
 * @param (uint32_t) index : Index of required value.
 * @param (uint16_t)*data_size : This field must be the structure or array size
 * (using sizeof() function).
 * @return (uint8_t) status : 0 if OK
 */

uint8_t vl53l7cx_dci_write_data(
	VL53L7CX_Configuration *p_dev,
	uint8_t *data,
	uint32_t index,
	uint16_t data_size);
/**
 * @brief This function can be used to replace 'extra data' in DCI. The data can
 * be simple data, or casted structure.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *data : This field can be a casted structure, or a simple
 * array. Please note that the FW only accept data of 32 bits. So field data can
 * only have a size of 32, 64, 96, 128, bits ..
 * @param (uint32_t) index : Index of required value.
 * @param (uint16_t)*data_size : This field must be the structure or array size
 * (using sizeof() function).
 * @param (uint8_t) *new_data : Contains the new fields.
 * @param (uint16_t) new_data_size : New data size.
 * @param (uint16_t) new_data_pos : New data position into the buffer.
 * @return (uint8_t) status : 0 if OK
 */

uint8_t vl53l7cx_dci_replace_data(
	VL53L7CX_Configuration *p_dev,
	uint8_t *data,
	uint32_t index,
	uint16_t data_size,
	uint8_t *new_data,
	uint16_t new_data_size,
	uint16_t new_data_pos);