src/ffi/bindings.rs

unsafe extern "C" {
    #[doc = " @brief This function gets the ranging data, using the selected output and the\n resolution.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (VL53L7CX_ResultsData) *p_results : VL53L5 results structure.\n @return (uint8_t) status : 0 data are successfully get."]
    pub fn vl53l7cx_get_ranging_data(
        p_dev: *mut VL53L7CX_Configuration,
        p_results: *mut VL53L7CX_ResultsData,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function gets the current resolution (4x4 or 8x8).\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_resolution : Value of this pointer will be equal to 16\n for 4x4 mode, and 64 for 8x8 mode.\n @return (uint8_t) status : 0 if resolution is OK."]
    pub fn vl53l7cx_get_resolution(p_dev: *mut VL53L7CX_Configuration, p_resolution: *mut u8)
    -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function sets a new resolution (4x4 or 8x8).\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) resolution : Use macro VL53L7CX_RESOLUTION_4X4 or\n VL53L7CX_RESOLUTION_8X8 to set the resolution.\n @return (uint8_t) status : 0 if set resolution is OK."]
    pub fn vl53l7cx_set_resolution(p_dev: *mut VL53L7CX_Configuration, resolution: u8) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function gets the current ranging frequency in Hz. Ranging\n frequency corresponds to the time between each measurement.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_frequency_hz: Contains the ranging frequency in Hz.\n @return (uint8_t) status : 0 if ranging frequency is OK."]
    pub fn vl53l7cx_get_ranging_frequency_hz(
        p_dev: *mut VL53L7CX_Configuration,
        p_frequency_hz: *mut u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function sets a new ranging frequency in Hz. Ranging frequency\n corresponds to the measurements frequency. This setting depends of\n the resolution, so please select your resolution before using this function.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) frequency_hz : Contains the ranging frequency in Hz.\n - For 4x4, min and max allowed values are : [1;60]\n - For 8x8, min and max allowed values are : [1;15]\n @return (uint8_t) status : 0 if ranging frequency is OK, or 127 if the value\n is not correct."]
    pub fn vl53l7cx_set_ranging_frequency_hz(
        p_dev: *mut VL53L7CX_Configuration,
        frequency_hz: u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function gets the current integration time in ms.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) *p_time_ms: Contains integration time in ms.\n @return (uint8_t) status : 0 if integration time is OK."]
    pub fn vl53l7cx_get_integration_time_ms(
        p_dev: *mut VL53L7CX_Configuration,
        p_time_ms: *mut u32,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function sets a new integration time in ms. Integration time must\n be computed to be lower than the ranging period, for a selected resolution.\n Please note that this function has no impact on ranging mode continous.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) time_ms : Contains the integration time in ms. For all\n resolutions and frequency, the minimum value is 2ms, and the maximum is\n 1000ms.\n @return (uint8_t) status : 0 if set integration time is OK."]
    pub fn vl53l7cx_set_integration_time_ms(
        p_dev: *mut VL53L7CX_Configuration,
        integration_time_ms: u32,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function gets the current sharpener in percent. Sharpener can be\n changed to blur more or less zones depending of the application.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) *p_sharpener_percent: Contains the sharpener in percent.\n @return (uint8_t) status : 0 if get sharpener is OK."]
    pub fn vl53l7cx_get_sharpener_percent(
        p_dev: *mut VL53L7CX_Configuration,
        p_sharpener_percent: *mut u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function sets a new sharpener value in percent. Sharpener can be\n changed to blur more or less zones depending of the application. Min value is\n 0 (disabled), and max is 99.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) sharpener_percent : Value between 0 (disabled) and 99%.\n @return (uint8_t) status : 0 if set sharpener is OK."]
    pub fn vl53l7cx_set_sharpener_percent(
        p_dev: *mut VL53L7CX_Configuration,
        sharpener_percent: u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function gets the current target order (closest or strongest).\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_target_order: Contains the target order.\n @return (uint8_t) status : 0 if get target order is OK."]
    pub fn vl53l7cx_get_target_order(
        p_dev: *mut VL53L7CX_Configuration,
        p_target_order: *mut u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function sets a new target order. Please use macros\n VL53L7CX_TARGET_ORDER_STRONGEST and VL53L7CX_TARGET_ORDER_CLOSEST to define\n the new output order. By default, the sensor is configured with the strongest\n output.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) target_order : Required target order.\n @return (uint8_t) status : 0 if set target order is OK, or 127 if target\n order is unknown."]
    pub fn vl53l7cx_set_target_order(p_dev: *mut VL53L7CX_Configuration, target_order: u8) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to get the ranging mode. Two modes are\n available using ULD : Continuous and autonomous. The default\n mode is Autonomous.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_ranging_mode : current ranging mode\n @return (uint8_t) status : 0 if get ranging mode is OK."]
    pub fn vl53l7cx_get_ranging_mode(
        p_dev: *mut VL53L7CX_Configuration,
        p_ranging_mode: *mut u8,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to set the ranging mode. Two modes are\n available using ULD : Continuous and autonomous. The default\n mode is Autonomous.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) ranging_mode : Use macros VL53L7CX_RANGING_MODE_CONTINUOUS,\n VL53L7CX_RANGING_MODE_CONTINUOUS.\n @return (uint8_t) status : 0 if set ranging mode is OK."]
    pub fn vl53l7cx_set_ranging_mode(p_dev: *mut VL53L7CX_Configuration, ranging_mode: u8) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to get the number of frames between 2 temperature\n compensation.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) *p_repeat_count : Number of frames before next temperature\n compensation. Set to 0 to disable the feature (default configuration)."]
    pub fn vl53l7cx_get_VHV_repeat_count(
        p_dev: *mut VL53L7CX_Configuration,
        p_repeat_count: *mut u32,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to set a periodic temperature compensation. By\n setting a repeat count different to 0 the firmware automatically runs a\n temperature calibration every N frames.\n default the repeat count is set to 0\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint32_t) repeat_count : Number of frames between temperature\n compensation. Set to 0 to disable the feature (default configuration)."]
    pub fn vl53l7cx_set_VHV_repeat_count(
        p_dev: *mut VL53L7CX_Configuration,
        repeat_count: u32,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function can be used to read 'extra data' from DCI. Using a known\n index, the function fills the casted structure passed in argument.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *data : This field can be a casted structure, or a simple\n array. Please note that the FW only accept data of 32 bits. So field data can\n only have a size of 32, 64, 96, 128, bits ....\n @param (uint32_t) index : Index of required value.\n @param (uint16_t)*data_size : This field must be the structure or array size\n (using sizeof() function).\n @return (uint8_t) status : 0 if OK"]
    pub fn vl53l7cx_dci_read_data(
        p_dev: *mut VL53L7CX_Configuration,
        data: *mut u8,
        index: u32,
        data_size: u16,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function can be used to write 'extra data' to DCI. The data can\n be simple data, or casted structure.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *data : This field can be a casted structure, or a simple\n array. Please note that the FW only accept data of 32 bits. So field data can\n only have a size of 32, 64, 96, 128, bits ..\n @param (uint32_t) index : Index of required value.\n @param (uint16_t)*data_size : This field must be the structure or array size\n (using sizeof() function).\n @return (uint8_t) status : 0 if OK"]
    pub fn vl53l7cx_dci_write_data(
        p_dev: *mut VL53L7CX_Configuration,
        data: *mut u8,
        index: u32,
        data_size: u16,
    ) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function can be used to replace 'extra data' in DCI. The data can\n be simple data, or casted structure.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *data : This field can be a casted structure, or a simple\n array. Please note that the FW only accept data of 32 bits. So field data can\n only have a size of 32, 64, 96, 128, bits ..\n @param (uint32_t) index : Index of required value.\n @param (uint16_t)*data_size : This field must be the structure or array size\n (using sizeof() function).\n @param (uint8_t) *new_data : Contains the new fields.\n @param (uint16_t) new_data_size : New data size.\n @param (uint16_t) new_data_pos : New data position into the buffer.\n @return (uint8_t) status : 0 if OK"]
    pub fn vl53l7cx_dci_replace_data(
        p_dev: *mut VL53L7CX_Configuration,
        data: *mut u8,
        index: u32,
        data_size: u16,
        new_data: *mut u8,
        new_data_size: u16,
        new_data_pos: u16,
    ) -> u8;
}
